added slime crit table

--- a/croak.html
+++ b/croak.html
@@ -33,13 +33,16 @@
 <li><a href="#slurm-priest">Slurm Priest</a></li>
 <li><a href="#slime-grubins">Slime Grubins</a></li>
 <li><a href="#mechanaut">Mechanaut</a></li>
+<li><a href="#slime-crit-table">﻿Slime Crit Table</a></li>
 <li><a href="#another-muddy-village">Another Muddy Village</a></li>
 </ul>
 </div>
 <h3 id="contributors">Contributors</h3>
+<p>this is a test of the handwriting.</p>
 <p>Every contributor has waived copyright to their work. Anyone can use it for any purpose without attribution.</p>
 <ul>
 <li>Ariel Churi</li>
+<li>Daniel Beltran</li>
 <li>Chris Messemore</li>
 <li>Dave</li>
 </ul>
@@ -47,7 +50,7 @@
      href="http://creativecommons.org/publicdomain/zero/1.0/">
     <img src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;" alt="CC0" />
   </a> <br />
- To the extent possible under law, the person who associated CC0 with this work has waived all copyright and related or neighboring rights to this work</p>
+ To the extent possible under law, the persons who associated CC0 with this work have waived all copyright and related or neighboring rights to this work.</p>
 </section>
 <section class="">
 <!-- ![](images/coversuper.svg) -->
@@ -212,16 +215,16 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 <section class="">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
 <p>No self respecting halfling is without their pipe and some good pipeweed.
-While smoking standard has no mechanical effect, certain herbal additives maybe added to a hot pipe to enhance the halflings abilities.
+While smoking standard pipeweed has no mechanical effect, certain herbal additives maybe added to a hot pipe to enhance the halflings abilities.
 A halfling may forage for pipeweed by rolling on the following table.
 Typically just before their next adventure.</p>
-<p>Standard pipeweed may be bought in shops in areas where halflings reside for 10sp each.
-It should also be noted that it would be terribly rude for a halfling to refuse another halfling a puff of pipeweed and nearly rude for the favor to not be asked. </p>
+<p>Standard pipeweed can only be foraged but may be bought in shops in areas where halflings reside for 10sp each.
+It should also be noted that it would be terribly rude for a halfling to refuse another halfling a puff of pipeweed and nearly as rude for the favor to not be asked. </p>
 <p>A halfling must use a portion of standard pipeweed to keep their pipe lit all day.
 With their pipe lit the halfling may use an action to add a little herbal supplement to the pipe. Effects do not stack.</p>
 <p class="forground"><img alt="" src="images/outro.svg" /></p>
 <h3 class="breakbefore" id="pipeweed-foraging-table">Pipeweed Foraging Table</h3>
-<p>A half day spent foraging allows may uncover some valuable pipeweed. Roll 3d16 +/-Luckmod.</p>
+<p>A half day spent foraging may uncover some valuable pipeweed. Roll 3d16 +/-Luckmod.</p>
 <div class="tablewrap">
 <table>
 <thead>
@@ -266,7 +269,7 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 <td>32</td>
 <td>Sneezewort</td>
 <td>1d3</td>
-<td>+1 luck, non-permanent</td>
+<td>+1 luck</td>
 <td>1 turn</td>
 </tr>
 <tr>
@@ -343,7 +346,7 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 <td>43</td>
 <td>Bladderwort</td>
 <td>1</td>
-<td>18 Intelligence Act -1d</td>
+<td>18 Intelligence, Act -1d</td>
 <td>1 turn</td>
 </tr>
 <tr>
@@ -368,6 +371,7 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </section>
 <section class="">
 <h2 id="shields-of-note">Shields of Note</h2>
+<p><look magic sword rules and translate to shields></p>
 <h3 id="magic-shield-1">Magic Shield 1</h3>
 <p>+1d atk, damage, and deed to bash.</p>
 <h3 id="magic-shield-2">Magic Shield 2</h3>
@@ -376,7 +380,7 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </section>
 <section>
 <h2 id="manifest-of-the-mundane">Manifest of the Mundane</h2>
-<h3 id="the-rain">The Rain</h3>
+<h3 id="the-rain-done">The Rain DONE</h3>
 <ol>
 <li>Never reaches the surface or extinguishes torches</li>
 <li>Completely deafens anyone it touches for as long as they remain wet</li>
@@ -406,8 +410,8 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 <li>Has a heartbeat.  If opened, the book will die.</li>
 <li>Contains the most beautiful illustrations you’ve ever seen. You do not want to part with this tome.</li>
 <li>Is written in ink that is only visible in complete darkness</li>
-<li></li>
-<li></li>
+<li>Contains a palimpsest of demon summoning.</li>
+<li>Agents of a great wizard hunt it.</li>
 <li></li>
 </ol>
 <h3 id="a-door">A Door</h3>
@@ -467,6 +471,147 @@ They use their full movement to roll right up to the enemy and burst upon taking
 <p class="breakbefore">a</p>
 </div>
 </div>
+</section>
+<section>
+<h2 id="slime-crit-table">﻿Slime Crit Table</h2>
+<h3 id="slime-critical-hit-matrix">Slime Critical Hit Matrix</h3>
+<table>
+<thead>
+<tr>
+<th>Slime HD</th>
+<th>Crit die</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1-3</td>
+<td>d3</td>
+</tr>
+<tr>
+<td>4-8</td>
+<td>d5</td>
+</tr>
+<tr>
+<td>9-14</td>
+<td>d7</td>
+</tr>
+<tr>
+<td>15-17</td>
+<td>d14</td>
+</tr>
+<tr>
+<td>18-19</td>
+<td>d16</td>
+</tr>
+<tr>
+<td>20+</td>
+<td>d24</td>
+</tr>
+</tbody>
+</table>
+<h3 id="crit-table-s-slimes">Crit Table S: Slimes</h3>
+<table>
+<thead>
+<tr>
+<th>Roll</th>
+<th>Result</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1 or less</td>
+<td>Slime causes mild rash. You’re itchy for 1d3 days.</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Slime gets in your mouth. Lose your sense of taste.</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Allergic reaction to slime! You take 1d3 points of damage each day until healed.</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Whatever object you hold in your right hand gets stuck there and is unremovable for 1d4 days</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Your feet get stuck to the ground for 1d4 rounds</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Slime hit splashes into face, slime hits eye. You are blinded by the attack for 1d6 rounds plus whatever extra effect the slime does.</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Slime envelopes your legs. 1d6 damage, movement reduced by half until healed.</td>
+</tr>
+<tr>
+<td>8</td>
+<td>Direct hit to the mouth. Ooze fills your belly. Slime auto hits for 1d3 turns unless healed for any amount.</td>
+</tr>
+<tr>
+<td>9</td>
+<td>Full face of ooze. Eyes burn out in 2d3 rounds.</td>
+</tr>
+<tr>
+<td>10</td>
+<td>Sword hand engulfed. DC 15 Strength.</td>
+</tr>
+<tr>
+<td>11</td>
+<td>Slime envelopes you. Dissolve at 1d6 HP and suffocate at 1d6 Stamina per round. DC 15 Strength check to get halfway out.</td>
+</tr>
+<tr>
+<td>12</td>
+<td>Eyes turn to jelly. You see&hellip;</td>
+</tr>
+<tr>
+<td>13</td>
+<td>Muck Mitosis! Slime drains plasma for an additional 1d8 damage. Part of the slime breaks out and becomes a second slime (of random kind) with 1d8 HP. Second slime immediately attacks.</td>
+</tr>
+<tr>
+<td>14</td>
+<td>Sludge Seizure! Slime tendrils control you like a marionette. You get a DC 20 Strength check to break free each round. While controlled the slime uses you to attack with 1d20 + 4 (1d4) blows.</td>
+</tr>
+<tr>
+<td>15</td>
+<td>Mephitic Mud! The slime&rsquo;s residue leaves a terrible odour on you, you suffer -2d to all Personality checks with anything that can smell for 1 week</td>
+</tr>
+<tr>
+<td>16</td>
+<td>Sticky Situation! Slime secretions splash on your body making it sticky. You easily stick to everything and can effortlessly move along surfaces at all angles as if affected by a roll of 11 on the Spider Climb spell for 1 day</td>
+</tr>
+<tr>
+<td>17</td>
+<td>Mired Boots - Target of the attack receives -2 to reflex saves and +1d to Fumble Rolls until slime has been removed from boots.</td>
+</tr>
+<tr>
+<td>18</td>
+<td>Enslimed Extremities! Hands turn to jelly. Attack d14 until magically</td>
+</tr>
+<tr>
+<td>19</td>
+<td>Ooze Osmosis! Part of the slime integrates with your body. Lose 1d5 Stamina and 1d3 HP per round. If Stamina goes to zero before you die, become a jelly person. A skeleton in a transparent body with the slices powers. Takes over brain in 1d30 days.</td>
+</tr>
+<tr>
+<td>20</td>
+<td>Slimed! - Slime has deposited part of itself upon target&rsquo;s head. Roll a d4 - (1) Eyes - Target receives -2 to attack rolls, (2) Ears - Target is deafened, (3) Mouth - Target is unable to communicate, (4) Target suffers results of 1, 2, and 3.  In effect until slime is removed</td>
+</tr>
+<tr>
+<td>22</td>
+<td></td>
+</tr>
+<tr>
+<td>23</td>
+<td></td>
+</tr>
+<tr>
+<td>24</td>
+<td>Crud Coup! Slime gushes through every pore in your body. You are the jelly person! Gain all ooze powers, 1d4 HP, and heal +1hp/day.</td>
+</tr>
+</tbody>
+</table>
 </section>
 <section>
 <h2 id="another-muddy-village">Another Muddy Village</h2>
