slurm priest finished.

--- a/output.html
+++ b/output.html
@@ -406,16 +406,16 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </section>
 <section>
 <h2 id="slurm-priest">Slurm Priest</h2>
-<p><strong>Slurm Priest:</strong> Init +2; Atk bite +2 melee (1d6 + swallow), Vomit Puss Grubin +3 ranged 40’ (1d3, 5’ area effect); AC 12; HD 2d8; hp 10; MV 20&rsquo;; Act 1d20 + 1d14; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +0; AL C.</p>
-<p>This upright, purple worm loves jewelry, profanity, and is always found with the <em>Slime Grubins</em> it has excreted. 
+<p><strong>Slurm Priest:</strong> Init +2; Atk bite +4 ranged 10&rsquo; (1d6 + swallow), Vomit Puss Grubin +3 ranged 40’ (area effect); AC 14; HD 4d8; hp 18; MV 25&rsquo;; Act 1d20 + 1d16; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +3; AL C.</p>
+<p>This upright, purple worm loves jewelry and profanity. It is always found with the <em>Slime Grubins</em> it has excreted. 
 A supplicant of its chaos lord, the Slurm Priest is often called to test the forces of Law. </p>
 <p><strong>Disgust:</strong> Any human in a 5’ range must make a fort save each round or lose a round. Demihumans are immune. </p>
-<p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed. The character will be upside down with arms pinned at waist and legs kicking. On the Slurm’s next turn the character drops any large weapon and is completely swallowed (unless aided in some way). Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.  Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
-<p>Characters who lose Stamina in the Slurm’s stomach have a chance of mutation (10% per point of Stamina, minor corruption table modified by luck).
+<p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed. The character will be upside down in the slurm&rsquo;s mouth with arms pinned at the waist and legs kicking. On the Slurm’s next turn the character drops any large weapon and is completely swallowed (unless aided in some way). Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.  Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
+<p>Characters who lose Stamina in the Slurm’s stomach have a chance of mutation. 10%/round, cumulative. Minor corruption table modified by luck.
 The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 <p>Anyone reduced to 6 or less Stamina becomes a Slurm Symbiote and is ejected from the rear (100% chance of mutation). The worms grow in the body. Over the next week, barring intervention, the victim falls very ill, begins to bloat, attempts to attack lawful clerics, and explodes releasing thousands of purple worms. </p>
 <p><strong>Vomit</strong> Can shoot a Puss Grubin. Shooting it up to 40’. +3 ranged, 1d4 Dam. The Puss Grubin explodes on a hit or lands ready to attack next turn on a miss. </p>
-<p><strong>Defecate</strong> Can release 3 Puss Grubins. If the Slurm has ingested Stamina, the Slurm can release Acid or Napalm Grubins. </p>
+<p><strong>Defecate</strong> Eject 3 Puss, Acid, or Napalm Grubins.</p>
 <p><strong>Exiting</strong> Upon losing a moral check or being reduced to too few HP; the Slurm will forcibly eject any characters in its stomach and bite its own tail and swallow itself until it has disappeared with a small pop. Upon death; the worm deflates with gas and fluid leaking out, leaving only a bit of skin, lips, teeth, and jewelry (1d14+14gp). 
 </div></p>
 </section>
