--- a/croak.html
+++ b/croak.html
@@ -33,7 +33,7 @@
 <li><a href="#slime-grubins">Slime Grubins</a></li>
 <li><a href="#mechanaut">Mechanaut</a></li>
 <li><a href="#slime-crit-table">﻿Slime Crit Table</a></li>
-<li><a href="#another-muddy-village">Another Muddy Village</a></li>
+<li><a href="#another-village">Another Village</a></li>
 </ul>
 </div>
 <h3 id="contributors">Contributors</h3>
@@ -439,16 +439,15 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 </section>
 <section>
 <h2 id="slime-grubins">Slime Grubins</h2>
-<p>These are standard grubins that have been pickled in the extradimensional stomach of the Slurm (see above). </p>
-<p><strong>Grubin:</strong> Init -1; Atk shiv -1 melee (1d4-1), burst area effect 5’ (1d3 and DC 10 Fort save or lose a round), AC 9; HD 1d6-1; hp 2; MV roll 35&rsquo;; Act 1d20; SP burst, infravision; SV Fort +1, Ref -1, Will +3; AL C</p>
-<p>Massively bloated into transluscent balls.
+<p>These are standard grubins that have been pickled in the extra-dimensional stomach of the Slurm (see above). </p>
+<p><strong>Grubin:</strong> Init -1; Atk shiv -1 melee (1d4-1), burst (area effect 5&rsquo;); AC 9; HD 1d6-1; hp 2; MV roll 35&rsquo;; Act 1d20; SP burst, infravision; SV Fort +1, Ref -1, Will +3; AL C</p>
+<p>Massively bloated into translucent balls.
 These frightened looking grubins roll into battle in numbers.
 They use their full movement to roll right up to the enemy and burst upon taking any damage.</p>
 <p><strong>Puss:</strong> 1d3 to all within 10’.</p>
-<p><strong>Napalm:</strong> 5&rsquo; covered in flaming gel and grubin bits. 1d5 damage/round. two DC 15 agility checks to remove. Anyone may attempt over multiple rounds.</p>
-<p><strong>Acid:</strong> Acid cloud 15’. 1d4 damage/round, DC 15 Ref save or lose a round, Act -1d.
+<p><strong>Napalm:</strong> 5&rsquo; covered in flaming gel and grubin bits. 1d5 damage/round. three DC 15 agility checks to remove. Anyone may attempt over multiple rounds.</p>
+<p class="breakbefore"><strong>Acid:</strong> Acid cloud 25’ square. 1d4 damage/round, DC 15 Ref save or lose a round, Act -1d.
 </div></p>
-<p class="breakbefore">a</p>
 </section>
 <section>
 <h2 id="mechanaut">Mechanaut</h2>
@@ -604,7 +603,7 @@ They use their full movement to roll right up to the enemy and burst upon taking
 </table>
 </section>
 <section>
-<h2 id="another-muddy-village">Another Muddy Village</h2>
+<h2 id="another-village">Another Village</h2>
 <table>
 <thead>
 <tr>
