slime grubins done

--- a/output.html
+++ b/output.html
@@ -428,8 +428,9 @@ These frightened looking grubins roll into battle in numbers.
 They use their full movement to roll right up to the enemy and burst upon taking any damage.</p>
 <p><strong>Puss:</strong> 1d3 to all within 10’.</p>
 <p><strong>Napalm:</strong> 5&rsquo; covered in flaming gel and grubin bits. 1d5 damage/round. three DC 15 agility checks to remove. Anyone may attempt over multiple rounds.</p>
-<p class="breakbefore"><strong>Acid:</strong> Acid cloud 25’ square. 1d4 damage/round, DC 15 Ref save or lose a round, Act -1d.
+<p><strong>Acid:</strong> Acid cloud 25’ square. 1d4 damage/round, DC 15 Ref save or lose a round, Act -1d.
 </div></p>
+<!-- {: .breakbefore} -->
 </section>
 <section>
 <h2 id="mechanaut">Mechanaut</h2>
