--- a/croak.html
+++ b/croak.html
@@ -439,10 +439,8 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 </section>
 <section>
 <h2 id="slime-grubins">Slime Grubins</h2>
-<p>These are standard grubins that have been pickled in the extra-dimensional stomach of the Slurm (see above). </p>
 <p><strong>Grubin:</strong> Init -1; Atk shiv -1 melee (1d4-1), burst (area effect 5&rsquo;); AC 9; HD 1d6-1; hp 2; MV roll 35&rsquo;; Act 1d20; SP burst, infravision; SV Fort +1, Ref -1, Will +3; AL C</p>
-<p>Massively bloated into translucent balls.
-These frightened looking grubins roll into battle in numbers.
+<p>Massively bloated into translucent balls in the stomach of the Slurm, these frightened looking grubins roll into battle in numbers.
 They use their full movement to roll right up to the enemy and burst upon taking any damage.</p>
 <p><strong>Puss:</strong> 1d3 to all within 10’.</p>
 <p><strong>Napalm:</strong> 5&rsquo; covered in flaming gel and grubin bits. 1d5 damage/round. three DC 15 agility checks to remove. Anyone may attempt over multiple rounds.</p>
@@ -453,12 +451,15 @@ They use their full movement to roll right up to the enemy and burst upon taking
 <section>
 <h2 id="mechanaut">Mechanaut</h2>
 <div class="">
-<p>A large, plate armor knight. A small creature in the head controls this mechanical armor. Usually attacks with a <em>bash</em> followed by a sword strike to the prone enemy. If the armor is killed, the head disconnects and flies away. </p>
-<p><strong>Mechanaut:</strong> Init +2; Atk Great Sword +4 melee (1d12+4), Bash +6 melee (1d6 + bash); AC 17; HD 4d12; HP 26; MV 35&rsquo;; Act 2d20; SP Shock Armor, bash, infravision, immune to critical hits; SV Fort +10, Ref +1, Will +6; AL N</p>
-<p>Shock Armor: contact with skin or steel causes shock damage (1d6). Drop your weapon on receiving 5 damage and damage 6 causes DC 20 Fort save or fall prone. </p>
-<p><em>Bash</em>: DC 15 or prone.</p>
-<p>Water causes it 1d12 damage/round. </p>
-<p class="breakbefore">a</p>
+<p><strong>Mechanaut:</strong> Init +2; Atk Great Sword +3 melee (1d12+3), Bash +6 melee (1d6 + bash); AC 18; HD 4d12; HP 26; MV 35&rsquo;; Act 2d20; SP Shock Armor, bash, omnivision, immune to critical hits; SV Fort +10, Ref +1, Will +6; AL N</p>
+<p>A large, plate armor knight.
+A small creature in the head controls this mechanical armor.
+All joints can rotate 360°.</p>
+<p>Usually attacks with a <em>bash</em> followed by a sword strike to the prone enemy.
+If the armor is killed, the head disconnects and flies away. </p>
+<p>Shock Armor: contact causes shock damage (1d6). Drop your weapon on receiving 4-5 damage and 6 requires a DC 20 Fort save or fall prone. Water disables.</p>
+<p>Bash: DC 15 or prone.</p>
+<!-- {: .breakbefore} -->
 </div>
 </div>
 </section>
