--- a/output.html
+++ b/output.html
@@ -573,11 +573,11 @@ If the armor is killed, the head disconnects and flies away. </p>
 </tr>
 <tr>
 <td>22</td>
-<td></td>
+<td>Slime reduces you to 1 hp and splits into three slimes.</td>
 </tr>
 <tr>
 <td>23</td>
-<td></td>
+<td>Slime slides under your clothes. Three succesful attack and one more each round. Cannot be removed.</td>
 </tr>
 <tr>
 <td>24</td>
