just needs one page

--- a/output.html
+++ b/output.html
@@ -9,13 +9,15 @@
 <ul>
 <li><a href="#autozinefier">AutoZinefier</a></li>
 <li><a href="#ranger">Ranger</a></li>
+<li><a href="#paladin">Paladin</a></li>
+<li><a href="#anti-paladin">Anti-Paladin</a></li>
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
 <li><a href="#manifest-of-the-mundane">Manifest of the Mundane</a></li>
+<li><a href="#another-village">Another Village</a></li>
 <li><a href="#slurm-priest">Slurm Priest</a></li>
 <li><a href="#slime-grubins">Slime Grubins</a></li>
 <li><a href="#mechanaut">Mechanaut</a></li>
 <li><a href="#slime-crit-table">﻿Slime Crit Table</a></li>
-<li><a href="#another-village">Another Village</a></li>
 </ul>
 </div>
 <h3 id="contributors">Contributors</h3>
@@ -72,7 +74,7 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 <p><strong>Initiative:</strong> A ranger adds his class level to his initiative rolls.</p>
 <p><strong>Luck:</strong> Rangers are naturall lucky. A ranger regenerates luck at the rate of 1 point each day.</p>
 <p><strong>Ranger skills:</strong> Rangers roll a d24 on all hunting, nature, and survival checks. Rangers can track most quarry without a roll at all.</p>
-<h3 id="ranger-table">Ranger Table</h3>
+<h3 class="breakbefore" id="ranger-table">Ranger Table</h3>
 <table>
 <thead>
 <tr>
@@ -189,9 +191,64 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 </tr>
 </tbody>
 </table>
-<p>Ranged attacks only.</p>
+<p>*Ranged attacks only.</p>
 <!-- ![](images/coversuper.svg) -->
 <!-- {: .background} -->
+</section>
+<section class="">
+<h2 id="paladin">Paladin</h2>
+<p>Everything as Cleric except the following.</p>
+<ul>
+<li>HD 1d10</li>
+<li>Attack +1 at first level and as Warrior with Mighty Deeds -d1 thereafter</li>
+<li><strong>Higher Standards</strong>. Disapproval Level begins at 2</li>
+<li>Weapon training as warrior</li>
+<li>Spells Known -1 per level</li>
+<li>Lucky Weapon as warrior</li>
+</ul>
+<h3 id="mighty-deed-smite">Mighty Deed: Smite</h3>
+<p>Affects only the unholy or evil. Weapon bathed in holy light.</p>
+<table>
+<thead>
+<tr>
+<th>Roll</th>
+<th>Effect</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>-1 Disapproval</td>
+</tr>
+<tr>
+<td>3</td>
+<td>+4 magic damage and roll turn unholy -4 focused on target.</td>
+</tr>
+<tr>
+<td>4</td>
+<td>+6 magic damage and roll turn unholy -2 focused on target.</td>
+</tr>
+<tr>
+<td>5</td>
+<td>+8 magic damage and unholy of 2 HD or less are killed instantly. Roll turn unholy focused on target.</td>
+</tr>
+<tr>
+<td>6</td>
+<td>+10 magic damage and unholy of 3 HD or less are killed instantly and explode in holy light that does 1d6 magic damage to surrounding unholy creatures.</td>
+</tr>
+<tr>
+<td>7+</td>
+<td>+12 magic damage and unholy of 4HD or less are killed instantly and explode in holy light that does 1d8 magic damage to surrounding unholy creatures. Roll turn unholy +4 focused on target</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section class="">
+<h2 id="anti-paladin">Anti-Paladin</h2>
+<p>As above but must wear black and…</p>
+<p><strong>Lay On Hands</strong>, is replaced with <em>Death Touch</em> (<em>DCC Annual</em>, #1, Pg 18).</p>
+<p><strong>Turn Unholy</strong> effects the same creatures as a lawful Cleric, but makes them your slaves. Use the <em>Turn Unholy</em> table but, the turned fight for you for the amount of time listed. Additionally, the recently deceased rise as well though their stats are usually poor. PCs are not deceased until they a fail <em>roll the body</em> check. Combine with <em>Death Touch</em> for more fun.</p>
+<p><strong>Fickle Master</strong>: The Anti-Paladin&rsquo;s natural disapproval level is 2 and they use a d5 when rolling on the disapproval table.</p>
 </section>
 <section class="">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
@@ -405,14 +462,160 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </ol>
 </section>
 <section>
+<h2 id="another-village">Another Village</h2>
+<table>
+<thead>
+<tr>
+<th>R</th>
+<th>Name</th>
+<th>Leader</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Wortlethorpe</td>
+<td>Goomie</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Bursheer</td>
+<td>Dar Dafa</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Inkvar</td>
+<td>Village Elders</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Obelast</td>
+<td>Footumch</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Tigre</td>
+<td>Zankule</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Boorsville</td>
+<td>Samuel Goodins</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Shiple</td>
+<td>Delphine</td>
+</tr>
+</tbody>
+</table>
+<p> </p>
+<table>
+<thead>
+<tr>
+<th>R</th>
+<th>Of Note</th>
+<th>Strife</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Poorly led</td>
+<td>No beer</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Powerful matriarchs</td>
+<td>Haunted</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Seasonal holiday</td>
+<td>Harrased by grubins</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Great shops</td>
+<td>Warring Families</td>
+</tr>
+<tr>
+<td>5</td>
+<td>A town secret</td>
+<td>A Cult</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Everyone lies</td>
+<td>Debt</td>
+</tr>
+<tr>
+<td>7</td>
+<td>The temple</td>
+<td>A town bully</td>
+</tr>
+</tbody>
+</table>
+<p> </p>
+<table>
+<thead>
+<tr>
+<th>R</th>
+<th>Atmosphere</th>
+<th>NPC</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Muddy hole</td>
+<td>Checkson own most everything</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Ramshackle</td>
+<td>Vixa, drinks and talks</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Smart carriage homes</td>
+<td>Suuli, helpful and smart</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Garden paths</td>
+<td>Dida Groot, healer</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Spread out</td>
+<td>Plix, runaway</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Upright homes</td>
+<td>Shoyla, gambler</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Warm and comfy</td>
+<td>Pingo, wealthy gadabout</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section>
 <h2 id="slurm-priest">Slurm Priest</h2>
 <p><strong>Slurm Priest:</strong> Init +2; Atk bite +4 ranged 10&rsquo; (1d6 + swallow), Vomit Puss Grubin +3 ranged 40’ (area effect); AC 14; HD 4d8; hp 18; MV 25&rsquo;; Act 1d20 + 1d16; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +3; AL C.</p>
 <p>This upright, purple worm loves jewelry and profanity. It is always found with the <em>Slime Grubins</em> it has excreted. 
 A supplicant of its chaos lord, the Slurm Priest is often called to test the forces of Law. </p>
 <p><strong>Disgust:</strong> Any human in a 5’ range must make a fort save each round or lose a round. Demihumans are immune. </p>
-<p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed. The character will be upside down in the slurm&rsquo;s mouth with arms pinned at the waist and legs kicking. On the Slurm’s next turn the character drops any large weapon and is completely swallowed (unless aided in some way). Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.  Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
-<p>Characters who lose Stamina in the Slurm’s stomach have a chance of mutation. 10%/round, cumulative. Minor corruption table modified by luck.
-The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
+<p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed.
+The character will be upside down in the slurm&rsquo;s mouth with arms pinned at the waist and legs kicking.
+On the Slurm’s next turn the character drops any large weapon and is completely swallowed (unless aided in some way).
+Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.
+Chance of mutation. 10%/round, cumulative. Minor corruption table modified by luck.
+Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
 <p>Anyone reduced to 6 or less Stamina becomes a Slurm Symbiote and is ejected from the rear (100% chance of mutation). The worms grow in the body. Over the next week, barring intervention, the victim falls very ill, begins to bloat, attempts to attack lawful clerics, and explodes releasing thousands of purple worms. </p>
 <p><strong>Vomit</strong> Can shoot a Puss Grubin. Shooting it up to 40’. +3 ranged, 1d4 Dam. The Puss Grubin explodes on a hit or lands ready to attack next turn on a miss. </p>
 <p><strong>Defecate</strong> Eject 3 Puss, Acid, or Napalm Grubins.</p>
@@ -586,102 +789,12 @@ If the armor is killed, the head disconnects and flies away. </p>
 </tbody>
 </table>
 </section>
-<section>
-<h2 id="another-village">Another Village</h2>
-<table>
-<thead>
-<tr>
-<th>R</th>
-<th>Name</th>
-<th>Leader</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>1</td>
-<td>Wortlethorpe</td>
-<td>Goomie</td>
-</tr>
-<tr>
-<td>2</td>
-<td>Bursheer</td>
-<td>Dar Dafa</td>
-</tr>
-<tr>
-<td>3</td>
-<td>Inkvar</td>
-<td>Village Elders</td>
-</tr>
-<tr>
-<td>4</td>
-<td>Obelast</td>
-<td>Footumch</td>
-</tr>
-<tr>
-<td>5</td>
-<td>Tigre</td>
-<td>Zankule</td>
-</tr>
-<tr>
-<td>6</td>
-<td>Boorsville</td>
-<td>Samuel Goodins</td>
-</tr>
-<tr>
-<td>7</td>
-<td>Shiple</td>
-<td>Delphine</td>
-</tr>
-</tbody>
-</table>
-<hr />
-<table>
-<thead>
-<tr>
-<th>R</th>
-<th>Of Note</th>
-<th>Strife</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>1</td>
-<td>Poorly led</td>
-<td>No beer</td>
-</tr>
-<tr>
-<td>2</td>
-<td>Powerful matriarchs</td>
-<td>Haunted</td>
-</tr>
-<tr>
-<td>3</td>
-<td></td>
-<td>Harrased by grubins</td>
-</tr>
-<tr>
-<td>4</td>
-<td>Great shops</td>
-<td>Warring Families</td>
-</tr>
-<tr>
-<td>5</td>
-<td>A town secret</td>
-<td>A Cult</td>
-</tr>
-<tr>
-<td>6</td>
-<td>Everyone lies</td>
-<td></td>
-</tr>
-<tr>
-<td>7</td>
-<td></td>
-<td>A town bully</td>
-</tr>
-</tbody>
-</table>
+<section class="clean">
+<p>Last page</p>
 </section>
-<section class="background">
+<section class="clean">
+<p>inside back cover</p>
+</section>
+<section class="clean">
 <p class="background"><img alt="" src="images/coversuper.svg" /></p>
 </section>
