--- a/croak.html
+++ b/croak.html
@@ -31,10 +31,10 @@
 <li><a href="#anti-paladin">Anti-Paladin</a></li>
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
 <li><a href="#manifest-of-the-mundane">Manifest of the Mundane</a></li>
-<li><a href="#another-village">Another Village</a></li>
 <li><a href="#slurm-priest">Slurm Priest</a></li>
 <li><a href="#slime-grubins">Slime Grubins</a></li>
 <li><a href="#mechanaut">Mechanaut</a></li>
+<li><a href="#another-village">Another Village</a></li>
 <li><a href="#slime-crit-table">﻿Slime Crit Table</a></li>
 </ul>
 </div>
@@ -43,9 +43,9 @@
 <p>Every contributor has waived copyright to their work. Anyone can use it for any purpose without attribution.</p>
 <ul>
 <li>Ariel Churi</li>
-<li>Daniel Beltran</li>
 <li>Chris Messemore</li>
-<li>Dave</li>
+<li>Daniel Beltran</li>
+<li>Dave Campbell</li>
 </ul>
 <p><a rel="license"
      href="http://creativecommons.org/publicdomain/zero/1.0/">
@@ -480,6 +480,50 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </ol>
 </section>
 <section>
+<h2 id="slurm-priest">Slurm Priest</h2>
+<p><strong>Slurm Priest:</strong> Init +2; Atk bite +4 ranged 10&rsquo; (1d6 + swallow), Vomit Puss Grubin +3 ranged 40’ (area effect); AC 14; HD 4d8; hp 18; MV 25&rsquo;; Act 1d20 + 1d16; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +3; AL C.</p>
+<p>This upright, purple worm loves jewelry and profanity. It is always found with the <em>Slime Grubins</em> it has excreted. 
+A supplicant of its chaos lord, the Slurm Priest is often called to test the forces of Law. </p>
+<p><strong>Disgust:</strong> Any human in a 5’ range must make a fort save each round or lose a round. Demihumans are immune. </p>
+<p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed.
+The character will be upside down in the slurm&rsquo;s mouth with arms pinned at the waist and legs kicking.
+On the Slurm’s next turn the character drops any large weapon and is completely swallowed (unless aided in some way).
+Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.
+Chance of mutation. 10%/round, cumulative. Minor corruption table modified by luck.
+Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
+<p>Anyone reduced to 6 or less Stamina becomes a Slurm Symbiote and is ejected from the rear (100% chance of mutation). The worms grow in the body. Over the next week, barring intervention, the victim falls very ill, begins to bloat, attempts to attack lawful clerics, and explodes releasing thousands of purple worms. </p>
+<p><strong>Vomit</strong> Can shoot a Puss Grubin. Shooting it up to 40’. +3 ranged, 1d4 Dam. The Puss Grubin explodes on a hit or lands ready to attack next turn on a miss. </p>
+<p><strong>Defecate</strong> Eject 3 Puss, Acid, or Napalm Grubins.</p>
+<p><strong>Exiting</strong> Upon losing a moral check or being reduced to too few HP; the Slurm will forcibly eject any characters in its stomach and bite its own tail and swallow itself until it has disappeared with a small pop. Upon death; the worm deflates with gas and fluid leaking out, leaving only a bit of skin, lips, teeth, and jewelry (1d14+14gp). 
+</div></p>
+</section>
+<section>
+<h2 id="slime-grubins">Slime Grubins</h2>
+<p><strong>Grubin:</strong> Init -1; Atk shiv -1 melee (1d4-1), burst (area effect 5&rsquo;); AC 9; HD 1d6-1; hp 2; MV roll 35&rsquo;; Act 1d20; SP burst, infravision; SV Fort +1, Ref -1, Will +3; AL C</p>
+<p>Massively bloated into translucent balls in the stomach of the Slurm, these frightened looking grubins roll into battle in numbers.
+They use their full movement to roll right up to the enemy and burst upon taking any damage.</p>
+<p><strong>Puss:</strong> 1d3 to all within 10’.</p>
+<p><strong>Napalm:</strong> 5&rsquo; covered in flaming gel and grubin bits. 1d5 damage/round. three DC 15 agility checks to remove. Anyone may attempt over multiple rounds.</p>
+<p><strong>Acid:</strong> Acid cloud 25’ square. 1d4 damage/round, DC 15 Ref save or lose a round, Act -1d.
+</div></p>
+<!-- {: .breakbefore} -->
+</section>
+<section>
+<h2 id="mechanaut">Mechanaut</h2>
+<div class="">
+<p><strong>Mechanaut:</strong> Init +2; Atk Great Sword +3 melee (1d12+3), Bash +6 melee (1d6 + bash); AC 18; HD 4d12; HP 26; MV 35&rsquo;; Act 2d20; SP Shock Armor, bash, omnivision, immune to critical hits; SV Fort +10, Ref +1, Will +6; AL N</p>
+<p>A large, plate armor knight.
+A small creature in the head controls this mechanical armor.
+All joints can rotate 360°.</p>
+<p>Usually attacks with a <em>bash</em> followed by a sword strike to the prone enemy.
+If the armor is killed, the head disconnects and flies away. </p>
+<p>Shock Armor: contact causes shock damage (1d6). Drop your weapon on receiving 4-5 damage and 6 requires a DC 20 Fort save or fall prone. Water disables.</p>
+<p>Bash: DC 15 or prone.</p>
+<!-- {: .breakbefore} -->
+</div>
+</div>
+</section>
+<section>
 <h2 id="another-village">Another Village</h2>
 <table>
 <thead>
@@ -621,50 +665,6 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </tr>
 </tbody>
 </table>
-</section>
-<section>
-<h2 id="slurm-priest">Slurm Priest</h2>
-<p><strong>Slurm Priest:</strong> Init +2; Atk bite +4 ranged 10&rsquo; (1d6 + swallow), Vomit Puss Grubin +3 ranged 40’ (area effect); AC 14; HD 4d8; hp 18; MV 25&rsquo;; Act 1d20 + 1d16; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +3; AL C.</p>
-<p>This upright, purple worm loves jewelry and profanity. It is always found with the <em>Slime Grubins</em> it has excreted. 
-A supplicant of its chaos lord, the Slurm Priest is often called to test the forces of Law. </p>
-<p><strong>Disgust:</strong> Any human in a 5’ range must make a fort save each round or lose a round. Demihumans are immune. </p>
-<p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed.
-The character will be upside down in the slurm&rsquo;s mouth with arms pinned at the waist and legs kicking.
-On the Slurm’s next turn the character drops any large weapon and is completely swallowed (unless aided in some way).
-Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.
-Chance of mutation. 10%/round, cumulative. Minor corruption table modified by luck.
-Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
-<p>Anyone reduced to 6 or less Stamina becomes a Slurm Symbiote and is ejected from the rear (100% chance of mutation). The worms grow in the body. Over the next week, barring intervention, the victim falls very ill, begins to bloat, attempts to attack lawful clerics, and explodes releasing thousands of purple worms. </p>
-<p><strong>Vomit</strong> Can shoot a Puss Grubin. Shooting it up to 40’. +3 ranged, 1d4 Dam. The Puss Grubin explodes on a hit or lands ready to attack next turn on a miss. </p>
-<p><strong>Defecate</strong> Eject 3 Puss, Acid, or Napalm Grubins.</p>
-<p><strong>Exiting</strong> Upon losing a moral check or being reduced to too few HP; the Slurm will forcibly eject any characters in its stomach and bite its own tail and swallow itself until it has disappeared with a small pop. Upon death; the worm deflates with gas and fluid leaking out, leaving only a bit of skin, lips, teeth, and jewelry (1d14+14gp). 
-</div></p>
-</section>
-<section>
-<h2 id="slime-grubins">Slime Grubins</h2>
-<p><strong>Grubin:</strong> Init -1; Atk shiv -1 melee (1d4-1), burst (area effect 5&rsquo;); AC 9; HD 1d6-1; hp 2; MV roll 35&rsquo;; Act 1d20; SP burst, infravision; SV Fort +1, Ref -1, Will +3; AL C</p>
-<p>Massively bloated into translucent balls in the stomach of the Slurm, these frightened looking grubins roll into battle in numbers.
-They use their full movement to roll right up to the enemy and burst upon taking any damage.</p>
-<p><strong>Puss:</strong> 1d3 to all within 10’.</p>
-<p><strong>Napalm:</strong> 5&rsquo; covered in flaming gel and grubin bits. 1d5 damage/round. three DC 15 agility checks to remove. Anyone may attempt over multiple rounds.</p>
-<p><strong>Acid:</strong> Acid cloud 25’ square. 1d4 damage/round, DC 15 Ref save or lose a round, Act -1d.
-</div></p>
-<!-- {: .breakbefore} -->
-</section>
-<section>
-<h2 id="mechanaut">Mechanaut</h2>
-<div class="">
-<p><strong>Mechanaut:</strong> Init +2; Atk Great Sword +3 melee (1d12+3), Bash +6 melee (1d6 + bash); AC 18; HD 4d12; HP 26; MV 35&rsquo;; Act 2d20; SP Shock Armor, bash, omnivision, immune to critical hits; SV Fort +10, Ref +1, Will +6; AL N</p>
-<p>A large, plate armor knight.
-A small creature in the head controls this mechanical armor.
-All joints can rotate 360°.</p>
-<p>Usually attacks with a <em>bash</em> followed by a sword strike to the prone enemy.
-If the armor is killed, the head disconnects and flies away. </p>
-<p>Shock Armor: contact causes shock damage (1d6). Drop your weapon on receiving 4-5 damage and 6 requires a DC 20 Fort save or fall prone. Water disables.</p>
-<p>Bash: DC 15 or prone.</p>
-<!-- {: .breakbefore} -->
-</div>
-</div>
 </section>
 <section>
 <h2 id="slime-crit-table">﻿Slime Crit Table</h2>
