--- a/croak.html
+++ b/croak.html
@@ -27,6 +27,7 @@
 <ul>
 <li><a href="#autozinefier">AutoZinefier</a></li>
 <li><a href="#ranger">Ranger</a></li>
+<li><a href="#barbarian">Barbarian</a></li>
 <li><a href="#paladin">Paladin</a></li>
 <li><a href="#anti-paladin">Anti-Paladin</a></li>
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
@@ -212,6 +213,175 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 <p>*Ranged attacks only.</p>
 <!-- ![](images/coversuper.svg) -->
 <!-- {: .background} -->
+</section>
+<section class="">
+<h2 id="barbarian"><strong>Barbarian</strong></h2>
+<p><strong>Hit points:</strong> 1d12 hit points per level</p>
+<p><strong>Weapon training:</strong> A barbarian is trained in the use of these weapons:
+battleaxe, club, crossbow, dagger, handaxe, javelin, longsword, mace,
+polearm, shortbow, short sword, sling, spear, staff, two-handed sword,
+and warhammer. Barbarians may wear any armor but the armor&rsquo;s check
+penalty offsets their natural, agility based, armor class bonus.</p>
+<p>Notably absent from the weapons list is the longbow which would require
+additional training to master.</p>
+<p><strong>Armor class:</strong>  The barbarian gains an armor class bonus based on
+their level. This bonus is reduced by any armor check penalty or any
+other agility modifier.</p>
+<p><strong>Attack</strong>: Berserker Die, same as Deed Die but no mighty deeds. Max
+roll on the berserker die and the barbarian goes berserk. The player may
+choose to roll any die lower on the dice chain (make the fight harder to
+make yourself angrier and more likely to go berserk). The player may
+burn a point of Intelligence to avoid entering Berserker Mode.</p>
+<p><strong>Berserker</strong>: When facing a threat and rolling the maximum value on the
+berserker die, the barbarian goes berserk until their are no reachable
+enemies or he/she burns 2 points of intelligence. A berserk barbarian
+adds their level to their armor class. The barbarian gains an additional
+action die -1d on the dice chain from their current lowest action die.
+This action may be used during the current round.</p>
+<p>Going berserk imposes the following additional modifiers to saving
+throws; +2 Fort, +2 Reflex, -2 Will.</p>
+<p>It is not possible to enter berserk mode at will. In other words, the
+roll that goes berserk must be against a real threat.</p>
+<p>After a going berserk the barbarian freaks out.</p>
+<p><strong>Freak Out (d6)</strong>:</p>
+<ol>
+<li>Attack closest anything once at -d1 attack and damage.</li>
+<li>Destroy furniture sized object. As above if no object available.</li>
+<li>Strip clothes and bathe in the blood of your enemies.</li>
+<li>Run around screaming in people&rsquo;s faces.</li>
+<li>Victory cry / dance</li>
+<li>Flex</li>
+</ol>
+<p><strong>See Red:</strong> Burn personality to Increase attack, damage and crit rolls
+for 1 round/level. Your armor class is reduced by the same amount.</p>
+<h3 id="barbarian-table"><strong>Barbarian Table</strong></h3>
+<table>
+<thead>
+<tr>
+<th>Lvl</th>
+<th>Atk</th>
+<th>Crit</th>
+<th>Threat Range</th>
+<th>Action Dice</th>
+<th>AC Bonus</th>
+<th>Ref</th>
+<th>Fort</th>
+<th>Will</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>+d3</td>
+<td>1d12/III</td>
+<td>19-20</td>
+<td>1d20</td>
+<td>+2</td>
+<td>+1</td>
+<td>+1</td>
+<td>+0</td>
+</tr>
+<tr>
+<td>2</td>
+<td>+d3</td>
+<td>1d14/III</td>
+<td>19-20</td>
+<td>1d20</td>
+<td>+2</td>
+<td>+1</td>
+<td>+2</td>
+<td>+0</td>
+</tr>
+<tr>
+<td>3</td>
+<td>+d4</td>
+<td>1d16/IV</td>
+<td>19-20</td>
+<td>1d20</td>
+<td>+3</td>
+<td>+1</td>
+<td>+2</td>
+<td>+0</td>
+</tr>
+<tr>
+<td>4</td>
+<td>+d5</td>
+<td>1d20/IV</td>
+<td>18-20</td>
+<td>1d20</td>
+<td>+3</td>
+<td>+2</td>
+<td>+3</td>
+<td>+1</td>
+</tr>
+<tr>
+<td>5</td>
+<td>+d6</td>
+<td>1d24/V</td>
+<td>18-20</td>
+<td>1d20+1d16</td>
+<td>+4</td>
+<td>+2</td>
+<td>+4</td>
+<td>+1</td>
+</tr>
+<tr>
+<td>6</td>
+<td>+d7</td>
+<td>1d30/V</td>
+<td>18-20</td>
+<td>1d20+1d16</td>
+<td>+4</td>
+<td>+2</td>
+<td>+4</td>
+<td>+1</td>
+</tr>
+<tr>
+<td>7</td>
+<td>+d8</td>
+<td>1d30/V</td>
+<td>18-20</td>
+<td>1d20+1d20</td>
+<td>+5</td>
+<td>+3</td>
+<td>+5</td>
+<td>+2</td>
+</tr>
+<tr>
+<td>8</td>
+<td>+d10+1</td>
+<td>2d20/V</td>
+<td>18-20</td>
+<td>1d20+1d20</td>
+<td>+5</td>
+<td>+3</td>
+<td>+5</td>
+<td>+2</td>
+</tr>
+<tr>
+<td>9</td>
+<td>+d10+2</td>
+<td>2d20/V</td>
+<td>17-20</td>
+<td>1d20+1d20</td>
+<td>+6</td>
+<td>+3</td>
+<td>+6</td>
+<td>+2</td>
+</tr>
+<tr>
+<td>10</td>
+<td>+d10+3</td>
+<td>2d20/V</td>
+<td>17-20</td>
+<td>1d20+1d20+1d16</td>
+<td>+7</td>
+<td>+4</td>
+<td>+6</td>
+<td>+3</td>
+</tr>
+</tbody>
+</table>
 </section>
 <section class="">
 <h2 id="paladin">Paladin</h2>
